fixed bugs with flex gap

--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,7 @@
 
 .interests-card {
   height: 250px;
+  margin: 10px;
   width: 295px;
   border: 1px solid #eee;
   border-radius: 8px;
@@ -285,7 +286,7 @@
 }
 
 .interests-cards {
-  gap: 20px;
+  margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -501,6 +502,7 @@
           align-items: center;
   border: 1px solid #212121;
   padding: 15px;
+  margin: 8px;
   height: 56px;
   width: 257px;
   border-radius: 8px;
@@ -520,7 +522,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 20px;
+  margin: 20px auto 40px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -613,8 +615,11 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 15px;
   font-size: 22px;
+}
+
+.mobile-nav-links a {
+  margin: 5px;
 }
 
 @-webkit-keyframes view-menu {
