--- a/scss/_burger.scss
+++ b/scss/_burger.scss
@@ -37,24 +37,26 @@
   padding: 15px;
 
   &-links {
-      margin: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 15px;
-        font-size: 22px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    a {
+      margin: 5px;
+    }
   }
 }
 
 @keyframes view-menu {
-    from {
-        opacity: 0;
-    }
+  from {
+    opacity: 0;
+  }
 
-    to {
-        opacity: 1;
-    }
+  to {
+    opacity: 1;
+  }
 }
 
 .overlay {
