--- a/scss/_contacts.scss
+++ b/scss/_contacts.scss
@@ -1,64 +1,65 @@
 .contacts {
-	&-heading {
-		text-align: center;
-		font-size: 32px;
-		margin-top: 50px;
-	}
-	&-description {
-		text-align: center;
-		font-size: 28px;
-		margin-bottom: 30px;
-	}
+  &-heading {
+    text-align: center;
+    font-size: 32px;
+    margin-top: 50px;
+  }
+  &-description {
+    text-align: center;
+    font-size: 28px;
+    margin-bottom: 30px;
+  }
 
-	&-form {
-		display: flex;
-		flex-direction: column;
-		width: 280px;
-		margin: 0 auto;
-	}
-	&-input {
-		padding: 15px;
-		border-radius: 8px;
-		border: 1px solid #212121;
-		font-size: 16px;
-		margin-bottom: 10px;
-		margin-top: 5px;
-	}
-	&-textarea {
-		resize: none;
-	}
-	&-button {
-		width: 280px !important;
-		margin: 20px 0 0;
-	}
-	&-social {
-		&-container {
-			display: flex;
-			width: 600px;
-			margin: 20px auto;
-			margin-bottom: 50px;
-			flex-wrap: wrap;
-			justify-content: center;
-			gap: 20px;
-			@media only screen and (max-width: 600px) {
-				width: 300px;
-			}
-		}
-		display: flex;
-		align-items: center;
-		border: 1px solid #212121;
-		padding: 15px;
-		height: 56px;
-		width: 257px;
-		border-radius: 8px;
-		transition: 0.3s ease;
-		&:hover {
-			background: #f3ac42;
-			border: 1px solid #f3ac42;
-		}
-		&-img {
-			width: 35px;
-			margin-right: 10px;
-		}
-	}
+  &-form {
+    display: flex;
+    flex-direction: column;
+    width: 280px;
+    margin: 0 auto;
+  }
+  &-input {
+    padding: 15px;
+    border-radius: 8px;
+    border: 1px solid #212121;
+    font-size: 16px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+  }
+  &-textarea {
+    resize: none;
+  }
+  &-button {
+    width: 280px !important;
+    margin: 20px 0 0;
+  }
+  &-social {
+    &-container {
+      display: flex;
+      width: 600px;
+      margin: 20px auto;
+      margin-bottom: 50px;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin: 20px auto 40px;
+      @media only screen and (max-width: 600px) {
+        width: 300px;
+      }
+    }
+    display: flex;
+    align-items: center;
+    border: 1px solid #212121;
+    padding: 15px;
+    margin: 8px;
+    height: 56px;
+    width: 257px;
+    border-radius: 8px;
+    transition: 0.3s ease;
+    &:hover {
+      background: #f3ac42;
+      border: 1px solid #f3ac42;
+    }
+    &-img {
+      width: 35px;
+      margin-right: 10px;
+    }
+  }
 }
