--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -63,8 +63,8 @@
   align-items: center;
   flex-wrap: wrap;
   @media (max-width: 1192px) {
-	height: 70vh;
-	min-height: 1000px;
+    height: 70vh;
+    min-height: 1000px;
     justify-content: center;
     padding: 0 20px !important;
   }
@@ -198,7 +198,7 @@
       @media (max-width: 1300px) {
         justify-content: center;
       }
-      gap: 20px;
+      margin: auto;
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
@@ -206,6 +206,7 @@
       max-width: 1340px;
       padding: 30px;
     }
+    margin: 10px;
     width: 295px;
     border: 1px solid #eee;
     border-radius: 8px;
